--- a/first.ipynb
+++ b/first.ipynb
@@ -28,15 +28,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\n"
+      "5\n"
      ]
     }
    ],
    "source": [
     "a = 2\n",
     "b = 3\n",
-    "print(a-b)"
+    "print(a+b)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5021614",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -87,7 +93,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " please enter number:  89\n",
@@ -3236,7 +3242,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
